<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, G3MAndroidDemoActivity!</string>
    <string name="app_name">G3M Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_g3_mdemo">G3MDemo</string>
    <string name="simplest_glob3">Simplest glob3</string>
    <string name="tileCaching_glob3">Tile Cache Glob3</string>
    <string name="switch_layers">Switch Layers</string>
    <string name="title_activity_g3_msimplest">G3MSimplestActivity</string>
    <string name="title_activity_g3m_tileCaching">G3MSimplestTileCachingActivity</string>
    <string name="doubleGlob3">Double Glob3</string>
    <string name="symbology">Vectorial</string>
    <string name="markersLbl">Markers</string>
    <string name="netCDF">NetCDF</string>
    <string name="switchText">  Press button to switch base layer</string>
    <string name="animation">  Press button to move or stop the shapes</string>
    <string name="simplest_raster">Raster Layers</string>
    <string name="scenario">Scenario+DEM</string>
    <string name="pointClouds">Point clouds</string>
    <string name="threedmodel">3D Model</string>
    <string name="flatWorld">Flat World</string>
    <string name="cameraAnimation">Camera</string>
    <string name="uspopulation">US. Population (thousands)</string>
    <string name="sphinx">The Sphynx</string>
    <string name="toureifel">Eiffel Tower</string>
    <string name="arctriomphe">Arc de Triomphe</string>
    <string name="title_activity_simplest_raster">SimplestRasterActivity</string>
    <string name="threedsymbology">3D Symbology</string>
    <string name="changeSymbology">Change Symbology</string>
    <string name="vector_tiles">Vector Tiles</string>
    <string name="vector_streaming">Vector Streaming</string>
    <string name="point_cloud_streaming">LiDAR Streaming</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scenario_terrain">ScenarioTerrain</string>
    <string name="title_activity_plane_flying">PlaneFlyingActivity</string>
    <string name="title_activity_point_cloud">PointCloudActivity</string>
    <string name="title_activity_three_dmodel">ThreeDModelActivity</string>
    <string name="title_activity_symbology">SymbologyActivity</string>
    <string name="title_activity_flat_world">FlatWorldActivity</string>
    <string name="title_activity_camera_animation">CameraAnimation</string>
    <string name="title_activity_shape_symbolizer">ShapeSymbolizerActivity</string>

</resources>