<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/simpleG3MButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/simplest_glob3" />
        
            <Button
            android:id="@+id/switchLayersG3MButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_layers" />
            
            
                        <Button
            android:id="@+id/doubleGlob3G3MButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/doubleGlob3" />

    </LinearLayout>

</RelativeLayout>
