<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CameraAnimation" >

        <RelativeLayout 
    android:id="@+id/g3mWidgetHolder"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".SimplestRasterActivity" >
    </RelativeLayout>

        <Button
            android:id="@+id/sphinx"
            android:background="@drawable/buttonbackground"
            android:layout_width="wrap_content"
            android:padding="6dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
                        android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
     	    android:layout_toLeftOf="@+id/eiffel"
            android:text="@string/sphinx" />

        <Button
            android:id="@+id/eiffel"
            android:padding="6dp"
            android:background="@drawable/buttonbackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:layout_centerHorizontal="true"
            android:text="@string/toureifel" />

        <Button
            android:id="@+id/triomphe"
            android:padding="6dp"
            android:background="@drawable/buttonbackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
                        android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:layout_toRightOf="@+id/eiffel"
            android:layout_centerHorizontal="true"
            android:text="@string/arctriomphe" />

</RelativeLayout>
